name:                fastparser
version:             0.1.0
synopsis:            A fast bytestring parser.
description:         Please see README.md
homepage:            https://github.com/bartavelle/fastparser#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Marechal
maintainer:          bartavelle@gmail.com
copyright:           Simon Marechal
category:            Parsing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ByteString.Parser.Fast
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , thyme
                     , vector-space
                     , lens
  ghc-options:         -O2 -Wall -Werror
  default-language:    Haskell2010

test-suite fastparser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fastparser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bartavelle/fastparser
